fixed word wrapping on username in profile

--- a/profile_format.css
+++ b/profile_format.css
@@ -39,7 +39,8 @@
 
     display: flex;
     align-items: center;
-    flex-wrap: wrap;
+    
+    word-break: break-word;
 
     border-bottom: 1px solid gainsboro;
 }
